fix header alignments

--- a/ddp-workspace/projects/ddp-lms/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-lms/src/app/components/header/header.component.scss
@@ -52,6 +52,7 @@
     .loginOutButtons {
       display: flex;
       justify-content: flex-end;
+      margin-top: 1.2rem;
 
       ::ng-deep .SimpleButton:hover {
         background-color: rgba(0, 0, 0, 0.04);
@@ -66,15 +67,15 @@
       justify-content: space-between;
       width: 90%;
       position: fixed;
+
+      .header__nav {
+        position: absolute;
+        top: 4.25rem;
+        left: 10%;
+      }
     }
 
-    .mobile-nav {
-      position: absolute;
-      top: 4.25rem;
-      left: 10%;
-    }
-
-    @media (max-width: 340px) {
+    @media (max-width: 21.25rem) {
       gap: 0;
     }
   }
@@ -122,8 +123,8 @@
       }
 
       .dashboard-icon {
-        width: 28px;
-        height: 28px;
+        width: 1.75rem;
+        height: 1.75rem;
       }
     }
   }
@@ -135,7 +136,7 @@
 
 .header-link__dashboard,
 .header-link {
-  margin-right: 10px;
+  margin-right: 0.625rem;
   display: flex;
   align-items: center;
 }
@@ -172,19 +173,19 @@
 }
 
 .activity-heading {
-  width: 700px;
+  width: 43.75rem;
   margin: 0 1.5rem;
 }
 
 .header_shadow {
-  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.125rem 1.25rem 0 rgba(0, 0, 0, 0.2);
 }
 
 .auth {
   display: flex;
   align-items: center;
-  margin-left: 15px;
-  margin-top: 1.5rem;
+  margin-left: 0.9375rem;
+  margin-top: 1.2rem;
 
   ::ng-deep .SimpleButton:hover {
     background-color: rgba(0, 0, 0, 0.04);
@@ -201,7 +202,7 @@
   padding: 0.7rem 1.75rem !important;
   background-color: #9953ce;
   border-color: #9953ce;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   color: white;
   font-size: 1.0625rem;
   transition: color 0.3s;
@@ -213,20 +214,20 @@
   }
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 40.625rem) {
   .activity-heading {
     margin: 0 1rem;
   }
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 53.125rem) {
   .breadcrumbs {
     display: none;
   }
 }
 
 .header-content_sticky {
-  @media only screen and (max-width: 450px) {
+  @media only screen and (max-width: 28.125rem) {
     .project-logo__text {
       display: none;
     }
@@ -236,7 +237,7 @@
     }
   }
 
-  @media only screen and (max-width: 350px) {
+  @media only screen and (max-width: 21.875rem) {
     .project-logo {
       display: none;
     }
@@ -256,6 +257,7 @@
 }
 
 .hamburger {
+  transform: translateY(12px);
   padding: 2rem;
   cursor: pointer;
   transition-property: opacity, filter;
